<resources>
    <string name="app_name">빡노트 🔥</string>
    <string name="description_menu_note_list_search">search note in list</string>
    <string name="menu_note_list_search">search</string>
    <string name="btn_save_note">저장</string>
    <string name="hint_password">암호</string>
    <string name="chk_lock_memo">메모 잠금</string>
    <string name="description_fab_add_note">Add note button</string>
    <string name="dialog_require_password_title">비밀번호를 입력하세요</string>
    <string name="description_secret_note">secret note view</string>
    <string name="menu_secret_note_item_title_unlock">잠금 해제</string>
    <string name="menu_secret_note_item_title_delete_note">노트 삭제</string>
    <string name="hint_dialog_require_password_edittext">비밀 번호 입력</string>
    <string name="btn_require_password_complete">완료</string>
    <string name="btn_require_password_cancel">취소</string>
    <string name="description_change_password_menu">change user password</string>
    <string name="title_menu_note_list_change_password">비밀번호 변경</string>
    <string name="description_menu_note_list_lock_all_notes">lock every notes</string>
    <string name="title_menu_note_list_lock_all_notes">모든 노트 잠그기</string>
    <string name="description_menu_note_list_unlock_all_notes">unlock every notes</string>
    <string name="title_menu_note_list_unlock_all_notes">모든 노트 잠금 해제</string>
    <string name="description_menu_note_list_delete_all_notes">delete every notes</string>
    <string name="title_menu_note_list_delete_all_notes">모든 노트 삭제</string>
    <string name="title_dialog_change_password">비밀번호를 변경합니다</string>
    <string name="hint_dialog_change_password_edittext_current">현재 비밀 번호</string>
    <string name="hint_dialog_change_password_edittext_new">새로운 비밀 번호</string>
    <string name="title_dialog_first_password">새 비밀번호를 입력하세요</string>
    <string name="hint_dialog_first_password_edittext">비밀 번호 입력</string>
    <string name="btn_dialog_first_password_complete">완료</string>
    <string name="btn_dialog_first_password_cancel">취소</string>
    <string name="hint_new_note_title">노트 제목</string>
    <string name="hint_new_note_content">내용 입력</string>
    <string name="btn_update_note">수정</string>
    <string name="_0">0</string>
    <string name="description_empty_list">노트가 없어요!\n+ 버튼을 눌러 노트를 작성해보세요</string>
</resources>