<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/search_note"
        android:contentDescription="@string/description_menu_note_list_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/menu_note_list_search"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.widget.SearchView" />

    <item
        android:id="@+id/change_user_password"
        android:contentDescription="@string/description_change_password_menu"
        android:title="@string/title_menu_note_list_change_password"
        app:showAsAction="never" />

    <item
        android:id="@+id/lock_all_notes"
        android:contentDescription="@string/description_menu_note_list_lock_all_notes"
        android:title="@string/title_menu_note_list_lock_all_notes"
        app:showAsAction="never" />

    <item
        android:id="@+id/unlock_all_notes"
        android:contentDescription="@string/description_menu_note_list_unlock_all_notes"
        android:title="@string/title_menu_note_list_unlock_all_notes"
        app:showAsAction="never" />

    <item
        android:id="@+id/delete_all_notes"
        android:contentDescription="@string/description_menu_note_list_delete_all_notes"
        android:title="@string/title_menu_note_list_delete_all_notes"
        app:showAsAction="never" />
</menu>