<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_orange">

        <EditText
            android:id="@+id/et_title"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/rectangle_corner8_white"
            android:gravity="center"
            android:hint="@string/hint_new_note_title"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="1"
            android:padding="8dp"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintBottom_toBottomOf="@id/chk_lock"
            app:layout_constraintEnd_toStartOf="@+id/chk_lock"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/chk_lock"
            tools:text=""
            tools:visibility="visible" />

        <CheckBox
            android:id="@+id/chk_lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:checked="false"
            android:text="@string/chk_lock_memo"
            app:layout_constraintBottom_toBottomOf="@id/btn_update"
            app:layout_constraintEnd_toStartOf="@+id/btn_update"
            app:layout_constraintTop_toTopOf="@id/btn_update" />

        <Button
            android:id="@+id/btn_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:text="@string/btn_update_note"
            app:layout_constraintBottom_toTopOf="@+id/layout_content"
            app:layout_constraintEnd_toEndOf="@id/layout_content"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rectangle_corner8_white">

            <EditText
                android:id="@+id/note_content"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/bg_memo_content"
                android:gravity="top"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:padding="20dp"
                android:hint="@string/hint_new_note_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="메모 입력 테스트" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>