<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_yellow">

        <EditText
            android:id="@+id/et_title"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/rectangle_corner8_white"
            android:gravity="center"
            android:hint="@string/hint_new_note_title"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="1"
            android:padding="8dp"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintBottom_toBottomOf="@id/lottie_lock"
            app:layout_constraintEnd_toStartOf="@+id/lottie_lock"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/lottie_lock"
            tools:text=""
            tools:visibility="visible" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_lock"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="16dp"
            app:lottie_rawRes="@raw/lock"
            app:layout_constraintBottom_toBottomOf="@id/btn_save"
            app:layout_constraintEnd_toStartOf="@+id/btn_save"
            app:layout_constraintTop_toTopOf="@id/btn_save" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/light_red"
            android:text="@string/btn_save_note"
            app:layout_constraintEnd_toEndOf="@id/note_content"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/note_content"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_memo_content"
            android:gravity="top"
            android:hint="@string/hint_new_note_content"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:padding="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintBottom_toTopOf="@+id/tv_content_length"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_title"
            tools:text="메모 입력 테스트" />

        <TextView
            android:id="@+id/tv_content_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/note_content"
            app:layout_constraintTop_toBottomOf="@+id/note_content"
            android:text="@string/_0"
            tools:text="0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>